# video-motion-detection

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  measurements.sh  ps1.txt  ps2.txt  ps3.txt  ps4.txt
data/: fast_read_test_big.csv  fast_read_test_mid.csv  fast_read_test_small.csv  fastflow.csv  fastflow2.csv  fastflow3.csv  fastflow4.csv  fastflow_blocking.csv  fastflow_blocking2.csv  fastflow_blocking3.csv  fastflow_blocking4.csv  fastflow_blocking_no_map.csv  fastflow_blocking_no_map2.csv  fastflow_blocking_no_map3.csv  omp.csv  omp2.csv  omp3.csv  omp4.csv  read_frame_times.csv  sequential.csv  sequential2.csv  sequential3.csv  sequential4.csv  sequentialA.csv  threads.csv  threads2.csv  threads4.csv  threads_affinity.csv  threads_pinned.csv  threads_pinned2.csv  threads_pinned4.csv  work_read_test_big.csv  work_read_test_mid.csv  work_read_test_small.csv
data/copy07-07-small/: fastflow.csv  fastflow_blocking.csv  omp.csv  sequential.csv  threads.csv  threads_affinity.csv
data/mine07-07/: fastflow.csv  omp.csv  sequential.csv  threads.csv  threads_affinity.csv
data/old_data/: fastflowG.csv  fastflow_blocking2.csv  fastflow_blockingAA.csv  fastflow_blocking_no_map4-lower.csv  fastflow_blocking_no_map4.csv  omp2.csv  omp3.csv  sequential2AA.csv  sequential4.csv  sequentialR.csv  threads2.csv  threads3.csv  threads_pinned3.csv
plot/: measurements.ipynb  plot.ipynb
report/: bib.bib  main.tex
src/: args.cpp  cpu_affinity.cpp  fastflow.cpp  fastflow_blocking.cpp  fastflow_blocking_no_map.cpp  main.cpp  measurements.cpp  omp.cpp  sequential.cpp  shared_queue.cpp  threads.cpp  threads_pinned.cpp  utimer.cpp  video_detection.cpp  video_detection_fastflow.cpp  video_detection_main.cpp  video_detection_sequential.cpp  video_detection_threads.cpp
src/lib/: args.cpp  cpu_affinity.cpp  kernels.cpp  main.cpp  plot.ipynb  shared_queue.cpp  utimer.cpp  video_detection.cpp
