cmake_minimum_required(VERSION 2.8.12)
project( SPM )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

add_executable( sequential src/video_detection_sequential.cpp )
set_property(TARGET sequential PROPERTY CXX_STANDARD 20)
target_compile_options( sequential PRIVATE -O3 -Wall)
target_link_libraries( sequential ${OpenCV_LIBS} pthread )

add_executable( fastflow src/video_detection_fastflow.cpp )
set_property(TARGET fastflow PROPERTY CXX_STANDARD 20)
target_compile_options( fastflow PRIVATE -O3 -Wall -g)
target_link_libraries( fastflow ${OpenCV_LIBS} pthread )

add_executable( threads src/video_detection_threads.cpp )
set_property(TARGET threads PROPERTY CXX_STANDARD 20)
target_compile_options( threads PRIVATE -O3 -Wall)
target_link_libraries( threads ${OpenCV_LIBS} pthread )
